--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "scripts": {
     "test": "karma start test/karma.conf.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.15.4",
+    "gzippo": "^0.2.0"
+  }
 }
