--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "express": "^4.15.4",
-    "gzippo": "^0.2.0"
+    "gzippo": "^0.2.0",
+    "morgan": "^1.8.2"
   }
 }
