--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
-    "angularUtils-pagination": "0.11.0"
+    "angular-bootstrap": "^2.5.0",
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
