--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-bootstrap": "^2.5.0",
-    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
+    "bootstrap":"~4.0.0-beta"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
