--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-route": "^1.4.0",
     "angular-bootstrap": "^2.5.0",
     "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
-    "bootstrap":"~4.0.0-beta"
+    "bootstrap": "~4.0.0-beta",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
